# shinnku-bot

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
assets/okiru/: okiru_1.aac
commands/: admin.py  ban.py  chat1.py  chat_alpaca.py  chat_turbo.py  chat_ver1.py  echo.py  hs.py  netease.py  okiru.py  rua.py  start.py
configurations/: settings.py
constants/: ai.py  craw.py  sticker.py
src/: main.py
src/commands/: admin.py  ban.py  chat_turbo.py  hs.py  maintenance.py  netease.py  rua.py  rust.py  start.py
src/configurations/: settings.py
src/constants/: ai.py  craw.py
src/utils/: message_store.py  text_handling.py
tests/: test_chat_turbo.py  test_message_store.py
utils/: decorators.py  logger.py  text_handling.py
