[tool.poetry]
name = "shinnku-bot"
version = "0.1.0"
description = ""
authors = ["shinnku <nikaidou@shinnku.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^1.0.0"
python-telegram-bot = "^20.4"
numpy = "^1.25.2"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
