[project]
name = "shinnku-bot"
version = "0.1.0"
description = "A Telegram bot with various features"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "python-dotenv",
    "python-telegram-bot",
    "torch",
    "torchvision",
    "torchaudio",
    "requests",
    "pyyaml",
    "scipy",
    "pandas",
    "matplotlib",
    "sympy",
    "cryptography",
    "pillow",
    "ipython",
    "black",
    "openai",
    "telethon",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = []

[tool.black]
line-length = 88
target-version = ['py38']
